--- a/example/package.json
+++ b/example/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "^0.2.6",
+    "@react-native-picker/picker": "^1.16.5",
     "@react-navigation/bottom-tabs": "^6.0.2",
     "@react-navigation/drawer": "^6.1.0",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.3",
+    "axios": "^0.21.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-atomic-styles": "^0.0.1-rc.8",
@@ -28,7 +30,12 @@
     "react-native-screens": "^3.5.0",
     "react-native-svg": "^12.1.1",
     "react-native-text-gradient": "^0.1.7",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "react3l-axios-observable": "^6.0.0-rc.1",
+    "react3l-common": "^6.0.3-rc.1",
+    "react3l-decorators": "^6.0.0-rc.1",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
