--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "devDependencies": {
     "@commitlint/config-conventional": "^11.0.0",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@react-native-picker/picker": "^1.16.5",
     "@react-navigation/native": "^6.0.2",
     "@release-it/conventional-changelog": "^2.0.0",
     "@types/jest": "^26.0.0",
@@ -87,6 +88,7 @@
     "typescript": "^4.1.3"
   },
   "peerDependencies": {
+    "@react-native-picker/picker": "^1",
     "@react-navigation/native": "^6",
     "react": "*",
     "react-native": "*",
