--- a/example/package.json
+++ b/example/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-animatable": "^1.3.3",
     "react-native-atomic-styles": "^0.0.1-rc.8",
     "react-native-calendar-picker": "^7.1.2",
     "react-native-dash": "^0.0.11",
