--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -8,7 +8,7 @@ target 'React3lNativeKitExample' do
   
   use_react_native!(:path => config["reactNativePath"])
   
-  pod 'react-native-react3l-native-kit', :path => '../..'
+  pod 'react3l-native-kit', :path => '../..'
   
   # Enables Flipper.
   #
