--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
     "react-native-text-gradient": "*",
     "react-native-vector-icons": "^8",
     "react3l-common": "^6",
-    "rxjs": "^7"
+    "rxjs": "^7",
+    "react-native-animatable": "^1.3.3"
   },
   "jest": {
     "preset": "react-native",
@@ -176,7 +177,5 @@
       ]
     ]
   },
-  "dependencies": {
-    "react-native-animatable": "^1.3.3"
-  }
+  "dependencies": {}
 }
